# attica_invoice

./: README.md  main.py  pyproject.toml  test.ipynb  transfer.ipynb
all_dataframes/: all_dataframes.py
app/: app.py  check.py  logger.py  save.py
cccs_report/: IPHS 26-04-25.xlsx  IPHS 27-04-25.xlsx  IPHS 28-04-25.xlsx  IPHS 29-04-25.xlsx  iphs 300425.xlsx
data/: dataframes.py  price.py
data_source/: all_dataframe.py  expressions.py  make_dataset.py  save_dataset.py  sheet_ids.py
dataframe/: bin_dispatch.py  emr.py  miscellaneous.py  netlist.py  operations.py  shore_handling.py  stuffing.py  transport.py
logistics_check/datasets/: cleaning.py  cross_stuffing.py  forklift.py  pti.py  shifting.py  transfer.py
logistics_check/dates/: dates.py
output/csv/: bin_tipping.csv  bycatch.csv  cccs_stuffing.csv  container_plugin.csv  cross_stuffing.csv  dispatch_to_cargo.csv  empty_scows_transfer.csv  forklift.csv  forklift_salt.csv  full_scows_transfer.csv  hatch_to_hatch.csv  iot_container_stuffing.csv  net_list.csv  ops.csv  oss_stuffing.csv  pallet_liner.csv  pti.csv  salt.csv  scow_transfer.csv  shifting.csv  shore_crane.csv  static_loader.csv  transfer.csv  truck_to_cccs.csv  washing.csv
type_casting/: containers.py  customers.py  dates.py  iso_check.py  validations.py
