[project]
name = "attica-invoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "ipykernel>=6.29.5",
    "polars>=1.25.2",
    "pretty-errors>=1.2.25",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]
